--- a/library_manager/pubspec.yaml
+++ b/library_manager/pubspec.yaml
@@ -31,10 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shadcn_ui: ^0.46.1
+
+  # State management
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
